--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,29 @@
       "main": "./modernizr.js"
     },
     "material-design-lite": {
-      "main": "./src/material-design-lite.scss"
+
+      "main": [
+        "./src/material-design-lite.scss",
+        "./src/mdlComponentHandler.js",
+        "./src/button/button.js",
+        "./src/checkbox/checkbox.js",
+        "./src/data-table/data-table.js",
+        "./src/icon-toggle/icon-toggle.js",
+        "./src/button/button.js",
+        "./src/images/*.svg",
+        "./src/layout/layout.js",
+        "./src/menu/menu.js",
+        "./src/progress/progress.js",
+        "./src/radio/radio.js",
+        "./src/ripple/ripple.js",
+        "./src/slider/slider.js",
+        "./src/spinner/spinner.js",
+        "./src/switch/switch.js",
+        "./src/tabs/tabs.js",
+        "./src/textfield/textfield.js",
+        "./src/third_party/rAF.js",
+        "./src/tooltip/tooltip.js"
+      ]
     }
   }
 }
