--- a/bower.json
+++ b/bower.json
@@ -8,14 +8,14 @@
   "private": true,
   "dependencies": {
     "modernizr": "2.8.2",
-    "material-design-lite": "~1.0.0"
+    "material-design-lite": "~1.0.0",
+    "material-design-icons": "~2.0.0"
   },
   "overrides": {
     "modernizr": {
       "main": "./modernizr.js"
     },
     "material-design-lite": {
-
       "main": [
         "./src/material-design-lite.scss",
         "./src/mdlComponentHandler.js",
